examples/Passing/Binary/adding.c
int main () { return 4 + 5; }
