examples/Failing/Variables/fail_increment.c
int main() {
    ++5;
    return 10;
}
